Fix overflow issues in uikit tab

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -46,6 +46,11 @@ cp-fieldcontainer label {
     }
 }
 
+.uk-tab {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
 .uk-text-small {
     font-size: 14px;
 }
